...
          color={theme.colors.white}
          style={{
            paddingBottom: theme.padding.medium,
            paddingLeft: theme.padding.small,
          }}
        >
          Decks
        </ThemedText>
      )}
      {isLoadingDecks ? (
        <View style={{ flex: 1, justifyContent: "center", alignItems: "center", minHeight: 200 }}>
          <ActivityIndicator
            size="large"
...
        <ThemedText
          color={theme.colors.grey}
          style={{
            padding: theme.padding.small,
          }}
        >
          No saved decks yet. Add a new deck to get started!
        </ThemedText>
      ) : (
        <View style={layout === "edit" ? { paddingTop: theme.padding.medium } : {}}>
          {savedDecks.map((deck) => (
            <View key={deck.id + "-deck"}>
              <CompactDeck
...
